v 1.1 - Change Color Preset / Image

--- a/index.html
+++ b/index.html
@@ -68,81 +68,29 @@
 			<h2 class="section-title">Projects</h2>
 
 			<div class="project-container">
-				<img src="file/c082ba879c289bc711e0.png" alt="muvee">
+				<img src="file/folio.png" style="width:450px;height:250px" alt="PortFolio ">
 
 				<div class="project-content">
-					<h3>Muvee</h3>
+					<h3>Minimal PortFolio</h3>
 					<p>
-						A movie tracking app where users can create an account, log in and
-						add movies to the watchlist.
+						A minimal Portfolio designed by HTML, CSS & JS.
 					</p>
-
-					<ul class="project-skill">
-						<li>JavaScript</li>
-						<li>React.js</li>
-						<li>Redux</li>
-						<li>Jest</li>
-						<li>Cypress</li>
-						<li>Webpack</li>
-						<li>Node.js</li>
-						<li>Express.js</li>
-						<li>MongoDB</li>
-						<li>Redis</li>
-					</ul>
-
-					<ul class="project-link">
-						<li>
-							<a href="https://github.com/sh0von aria-label="Source code" target="_blank" title="source code" rel="noopener"><i class="icon-border fas fa-code" aria-hidden="true"></i></a>
-						</li>
-						<li>
-							<a href="" aria-label="Preview" target="_blank" title="preview" rel="noopener"><i aria-hidden="true" class="icon-border fas fa-external-link-alt"></i></a>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<div class="project-container">
-				<img src="file/03a8bfc2417572b04b29.png" alt="cleanfolio">
-
-				<div class="project-content">
-					<h3>Cleanfolio</h3>
-					<p>A clean and simple portfolio template for developers.</p>
-
-					<ul class="project-skill">
-						<li>CSS</li>
-						<li>JavaScript</li>
-						<li>React.js</li>
-					</ul>
-
-					<ul class="project-link">
-						<li>
-							<a href="https://github.com/sh0von" aria-label="Source code" target="_blank" title="source code" rel="noopener"><i class="icon-border fas fa-code" aria-hidden="true"></i></a>
-						</li>
-						<li>
-							<a href="" aria-label="Preview" target="_blank" title="preview" rel="noopener"><i aria-hidden="true" class="icon-border fas fa-external-link-alt"></i></a>
-						</li>
-					</ul>
-				</div>
-			</div>
-
-			<div class="project-container">
-				<img src="file/35534b9c8099089297e3.png" alt="startpage">
-
-				<div class="project-content">
-					<h3>Startpage</h3>
-					<p>A minimal startpage for Firefox.</p>
 
 					<ul class="project-skill">
 						<li>HTML</li>
 						<li>CSS</li>
-						<li>JavaScript</li>
+						<li>JS</li>
+						<li>Canva</li>
+						<li>Vercel</li>
+						<li>Git</li>
 					</ul>
 
 					<ul class="project-link">
 						<li>
-							<a href="https://github.com/sh0von" aria-label="Source code" target="_blank" title="source code" rel="noopener"><i class="icon-border fas fa-code" aria-hidden="true"></i></a>
+							<a href="https://github.com/sh0von/minimal_portfolio_svn" aria-label="Source code" target="_blank" title="source code" rel="noopener"><i class="icon-border fas fa-code" aria-hidden="true"></i></a>
 						</li>
 						<li>
-							<a href="" aria-label="Preview" target="_blank" title="preview" rel="noopener"><i aria-hidden="true" class="icon-border fas fa-external-link-alt"></i></a>
+							<a href="https://crywolf.me" aria-label="Preview" target="_blank" title="preview" rel="noopener"><i aria-hidden="true" class="icon-border fas fa-external-link-alt"></i></a>
 						</li>
 					</ul>
 				</div>
