--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Portfolio website of full stack developer Raj Shekhar">
+		<meta name="description" content="Portfolio website of Noob Minar">
 		<meta name="keywords" content="fullstack developer, fullstack, portfolio,
 			personal website, html, css, javascript, react">
 		<link rel="preconnect" href="https://fonts.gstatic.com/">
