--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
 		<meta property="og:image" content="file/folio.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Portfolio website of Noob Minar">
-		
-		<meta name="keywords" content="fullstack developer, fullstack, portfolio,
-			personal website, html, css, javascript, react">
+		<meta name="keywords" content=" fullstack, portfolio, personal website, html, css, javascript, react">
 		<link rel="preconnect" href="https://fonts.gstatic.com/">
-		<link href="file/css2.css" rel="stylesheet"> <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-		
+		<link href="file/css2.css" rel="stylesheet"> 
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 		<script src="file/fa62c117c7.js" crossorigin="anonymous"></script><style media="all" id="fa-v4-font-face">/*!
  * Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
