--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<img src="file/pymini.png" style="width:450px;height:250px" alt="Python Mini project ">
 
 				<div class="project-content">
-					<h3>Minimal PortFolio</h3>
+					<h3>Mini Project</h3>
 					<p>
 						All Python Mini projects for practice.
 					</p>
