--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<body class="body-light">
 		<header id="top">
 			<a class=" header-title" href="./">
-				<img src="file/svn.png" style="width:48px;height:48px" alt="muvee"></a>
+				<img src="file/svn.png" style="width:64px;height:64px" alt=""></a>
 			<nav>
 				<ul>
 					<li>
