--- a/index.html
+++ b/index.html
@@ -96,6 +96,31 @@
 					</ul>
 				</div>
 			</div>
+						<div class="project-container">
+				<img src="file/pysnake.png" style="width:450px;height:250px" alt="Python Snake game ">
+
+				<div class="project-content">
+					<h3>Mini Project</h3>
+					<p>
+						All PyGame Project from scratch
+					</p>
+
+					<ul class="project-skill">
+						<li>Python</li>
+						<li>PyGame</li>
+						<li>Git</li>
+					</ul>
+
+					<ul class="project-link">
+						<li>
+							<a href="https://github.com/sh0von/Python-Mini-Project/blob/main/Game/snake.py" aria-label="Source code" target="_blank" title="source code" rel="noopener"><i class="icon-border fas fa-code" aria-hidden="true"></i></a>
+						</li>
+						<li>
+							<a href="https://github.com/sh0von/Python-Mini-Project/blob/main/Game/snake.py" aria-label="Preview" target="_blank" title="preview" rel="noopener"><i aria-hidden="true" class="icon-border fas fa-external-link-alt"></i></a>
+						</li>
+					</ul>
+				</div>
+			</div>
 
 			<div class="project-container">
 				<img src="file/pymini.png" style="width:450px;height:250px" alt="Python Mini project ">
