--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<img src="file/pysnake.png" style="width:450px;height:250px" alt="Python Snake game ">
 
 				<div class="project-content">
-					<h3>Mini Project</h3>
+					<h3>Snake Pygame</h3>
 					<p>
 						All PyGame Project from scratch
 					</p>
