--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
 					</ul>
 				</div>
 			</div>
-
-			<div class="project-container">
+	<div class="project-container">
 				<img src="file/pymini.png" style="width:450px;height:250px" alt="Python Mini project ">
 
 				<div class="project-content">
@@ -142,6 +141,31 @@
 						</li>
 						<li>
 							<a href="https://github.com/sh0von/Python-Mini-Project" aria-label="Preview" target="_blank" title="preview" rel="noopener"><i aria-hidden="true" class="icon-border fas fa-external-link-alt"></i></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="project-container">
+				<img src="file/mwa.png" style="width:450px;height:250px" alt="Python Mini project ">
+
+				<div class="project-content">
+					<h3>Wolfram Alpha Messenger Bot</h3>
+					<p>
+						All Python Mini projects for practice.
+					</p>
+
+					<ul class="project-skill">
+						<li>Python</li>
+						<li>Git</li>
+<Li>Wolfram Alpha</>
+					</ul>
+
+					<ul class="project-link">
+						<li>
+							<a href="https://github.com/sh0von/WolframAlpha-Messenger-Bot" aria-label="Source code" target="_blank" title="source code" rel="noopener"><i class="icon-border fas fa-code" aria-hidden="true"></i></a>
+						</li>
+						<li>
+							<a href="https://github.com/sh0von/WolframAlpha-Messenger-Bot" aria-label="Preview" target="_blank" title="preview" rel="noopener"><i aria-hidden="true" class="icon-border fas fa-external-link-alt"></i></a>
 						</li>
 					</ul>
 				</div>
