--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 				</div>
 			</div>
 			<div class="project-container">
-				<img src="file/IMG_20220910_235437_851.png" style="width:450px;height:250px" alt="Python Mini project ">
+				<img src="file/90_be80aec1db9a2b53c9d399db0c602181.jpg" style="width:450px;height:250px" alt="Python Mini project ">
 
 				<div class="project-content">
 					<h3>Wolfram Alpha Messenger Bot</h3>
