--- a/index.html
+++ b/index.html
@@ -97,26 +97,28 @@
 				</div>
 			</div>
 						<div class="project-container">
-				<img src="file/pysnake.png" style="width:450px;height:250px" alt="Python Snake game ">
+				<img src="file/pysnake.png" style="width:450px;height:250px" alt="52-Problem-Solve-With-Python ">
 
 				<div class="project-content">
-					<h3>Snake Pygame</h3>
+					<h3>52-Problem-Solve-With-Python </h3>
 					<p>
-						All PyGame Project from scratch
+					
+
+52 Problem Solving With Pytho, All problems from Subeen sir's book which have solution with C language. So I've tried different way to solve these problem . SO i choose Python as my Language.
 					</p>
 
 					<ul class="project-skill">
 						<li>Python</li>
-						<li>PyGame</li>
+						<li>VS Code</li>
 						<li>Git</li>
 					</ul>
 
 					<ul class="project-link">
 						<li>
-							<a href="https://github.com/sh0von/Python-Mini-Project/blob/main/Game/snake.py" aria-label="Source code" target="_blank" title="source code" rel="noopener"><i class="icon-border fas fa-code" aria-hidden="true"></i></a>
+							<a href="https://github.com/sh0von/52-Problem-Solve-With-Python" aria-label="Source code" target="_blank" title="source code" rel="noopener"><i class="icon-border fas fa-code" aria-hidden="true"></i></a>
 						</li>
 						<li>
-							<a href="https://github.com/sh0von/Python-Mini-Project/blob/main/Game/snake.py" aria-label="Preview" target="_blank" title="preview" rel="noopener"><i aria-hidden="true" class="icon-border fas fa-external-link-alt"></i></a>
+							<a href="https://github.com/sh0von/52-Problem-Solve-With-Python" aria-label="Preview" target="_blank" title="preview" rel="noopener"><i aria-hidden="true" class="icon-border fas fa-external-link-alt"></i></a>
 						</li>
 					</ul>
 				</div>
