--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 				</div>
 			</div>
 						<div class="project-container">
-				<img src="file/pysnake.png" style="width:450px;height:250px" alt="52-Problem-Solve-With-Python ">
+				<img src="file/52.png" style="width:450px;height:250px" alt="52 Problem Solve With Python ">
 
 				<div class="project-content">
-					<h3>52-Problem-Solve-With-Python </h3>
+					<h3>52 Problem Solve With Python </h3>
 					<p>
 					
 
