--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
 
 			<div class="hero-about">
 				<p>
-					I am just a <b>Learner</b>. I enjoy writing clean code,pentesting system .Newbie to <b>Python/C++</b> and more.
+					          My name is  Shovon. I&apos;m a 
+          useless dev living in Chittagong, Bangladesh. I started learning web
+          dev/desgn when I was 15. Since then, I have made a lot of projects,
+          from basic HTML pages to complex projects like live Exam System.Now I'm learning Python/C++.
+          I hope to be a great developer and get my dream job in the future.
 				</p>
 
 				<a class="resume" href="">
