--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 
 			<div class="hero-about">
 				<p>
-					          My name is  <p style="color:#4E9F3D">Shovon</p>. I&apos;m a 
+					          My name is  <span style="color:#4E9F3D">Shovon</span>. I&apos;m a 
           useless dev living in Chittagong, Bangladesh. I have made a lot of projects,
           from basic HTML pages to complex projects like live Exam System.Now I'm learning Python/C++.
-          I hope to be a great <p style="color:#4E9F3D">NOOB</p> and get my dream job in the future.
+          I hope to be a great <i style="color:#4E9F3D">NOOB</i> and get my dream job in the future.
 				</p>
 
 				<a class="resume" href="">
