--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 			<nav>
 				<ul>
 					<li>
+						<a href="https://crywolf.vercel.app" class="link">Blog</a>
+					</li>
+					<li>
 						<a href="#project" class="link">Projects</a>
 					</li>
 					<li>
@@ -49,7 +52,7 @@
 			</nav>
 		</header>
 
-		<div class="hero">
+		<div class="hero transition">
 			<h1>
 				Hi. I am
 				<span class="hero-name">Minar</span>
@@ -57,7 +60,7 @@
 
 			<div class="hero-about">
 				<p>
-					          My name is  <i style="color:#4E9F3D">Shovon</i>. I&apos;m a 
+					          My name is  <i style="color:#4E9F3D">SHOVON</i>. I&apos;m a 
           useless dev living in Chittagong, Bangladesh. I have made a lot of projects,
           from basic HTML pages to complex projects like live Exam System.Now I'm learning Python/C++.
           I hope to be a great <i style="color:#4E9F3D">NOOB </i> and get my dream job in the future.
